--- a/package.json
+++ b/package.json
@@ -1,20 +1,7 @@
 {
   "name": "@samtgarson/hooks",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Webhooks for personal projects",
-  "main": "index.js",
-  "dependencies": {
-    "airtable": "^0.8.0",
-    "axios": "^0.19.0",
-    "micro-morgan": "^0.1.0",
-    "morgan": "^1.9.1"
-  },
-  "devDependencies": {
-    "@now/node": "^1.2.0",
-    "@types/express": "^4.17.2",
-    "@types/morgan": "^1.7.37",
-    "typescript": "^3.7.2"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -27,5 +14,43 @@
   "bugs": {
     "url": "https://github.com/samtgarson/hooks/issues"
   },
-  "homepage": "https://github.com/samtgarson/hooks#readme"
+  "homepage": "https://github.com/samtgarson/hooks#readme",
+  "dependencies": {
+    "airtable": "^0.8.0",
+    "axios": "^0.19.0"
+  },
+  "devDependencies": {
+    "@samtgarson/eslint-config": "^2.3.1",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.7",
+    "@types/nodemailer": "^6.4.0",
+    "@typescript-eslint/eslint-plugin": "^4.14.2",
+    "@typescript-eslint/parser": "^4.14.2",
+    "chalk": "^4.1.0",
+    "dotenv": "^8.2.0",
+    "eslint": "^7.19.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-promise": "^4.2.1",
+    "jest": "^26.6.3",
+    "jsome": "^2.5.0",
+    "pretty-error": "^3.0.3",
+    "string-length": "^4.0.1",
+    "ts-jest": "^26.5.0",
+    "typescript": "^4.1.3"
+  },
+  "eslintConfig": {
+    "extends": [
+      "@samtgarson/eslint-config",
+      "@samtgarson/eslint-config/typescript"
+    ]
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "moduleNameMapper": {
+      "@/(.*)": "<rootDir>/$1"
+    },
+    "setupFiles": [
+      "dotenv/config"
+    ]
+  }
 }
