--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.2",
   "description": "Webhooks for personal projects",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint .",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -16,16 +17,19 @@
   },
   "homepage": "https://github.com/samtgarson/hooks#readme",
   "dependencies": {
-    "airtable": "^0.8.0",
-    "axios": "^0.19.0"
+    "airtable": "^0.10.1",
+    "aws-sdk": "^2.840.0",
+    "axios": "^0.21.1",
+    "nodemailer": "^6.4.17"
   },
   "devDependencies": {
     "@samtgarson/eslint-config": "^2.3.1",
     "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.7",
+    "@types/node": "^14.14.25",
     "@types/nodemailer": "^6.4.0",
-    "@typescript-eslint/eslint-plugin": "^4.14.2",
-    "@typescript-eslint/parser": "^4.14.2",
+    "@typescript-eslint/eslint-plugin": "^4.15.0",
+    "@typescript-eslint/parser": "^4.15.0",
+    "@vercel/node": "^1.9.0",
     "chalk": "^4.1.0",
     "dotenv": "^8.2.0",
     "eslint": "^7.19.0",
@@ -41,8 +45,19 @@
   "eslintConfig": {
     "extends": [
       "@samtgarson/eslint-config",
-      "@samtgarson/eslint-config/typescript"
-    ]
+      "@samtgarson/eslint-config/typescript",
+      "plugin:import/typescript"
+    ],
+    "rules": {
+      "import/no-extraneous-dependencies": [
+        "error",
+        {
+          "devDependencies": [
+            "**/*.spec.js"
+          ]
+        }
+      ]
+    }
   },
   "jest": {
     "preset": "ts-jest",
