--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
   },
   "homepage": "https://github.com/samtgarson/hooks#readme",
   "dependencies": {
+    "@supabase/supabase-js": "^1.3.4",
     "airtable": "^0.10.1",
     "aws-sdk": "^2.840.0",
     "axios": "^0.21.1",
     "nodemailer": "^6.4.17"
   },
   "devDependencies": {
-    "@samtgarson/eslint-config": "^2.3.1",
+    "@samtgarson/eslint-config": "^2.4.0",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.25",
     "@types/nodemailer": "^6.4.0",
@@ -45,18 +46,10 @@
   "eslintConfig": {
     "extends": [
       "@samtgarson/eslint-config",
-      "@samtgarson/eslint-config/typescript",
-      "plugin:import/typescript"
+      "@samtgarson/eslint-config/typescript"
     ],
-    "rules": {
-      "import/no-extraneous-dependencies": [
-        "error",
-        {
-          "devDependencies": [
-            "**/*.spec.js"
-          ]
-        }
-      ]
+    "parserOptions": {
+      "project": "./tsconfig.json"
     }
   },
   "jest": {
