--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Webhooks for personal projects",
   "scripts": {
     "lint": "eslint .",
-    "test": "jest"
+    "test": "jest",
+    "quirrel": "quirrel",
+    "vercel-build": "quirrel ci"
   },
   "repository": {
     "type": "git",
@@ -21,7 +23,8 @@
     "airtable": "^0.10.1",
     "aws-sdk": "^2.840.0",
     "axios": "^0.21.1",
-    "nodemailer": "^6.4.17"
+    "nodemailer": "^6.4.17",
+    "quirrel": "^1.0.4"
   },
   "devDependencies": {
     "@samtgarson/eslint-config": "^2.4.0",
@@ -32,6 +35,7 @@
     "@typescript-eslint/parser": "^4.15.0",
     "@vercel/node": "^1.9.0",
     "chalk": "^4.1.0",
+    "concurrently": "^5.3.0",
     "dotenv": "^8.2.0",
     "eslint": "^7.19.0",
     "eslint-plugin-import": "^2.22.1",
