--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "airtable": "^0.10.1",
     "aws-sdk": "^2.840.0",
     "axios": "^0.21.1",
+    "html-to-epub": "^0.6.0",
     "nodemailer": "^6.4.17",
     "quirrel": "^1.0.4"
   },
