Fix tests for timezones and check for output dir

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ ROBOT_IAM_ACCESS_KEY_ID=robot_iam_access_key_id
 ROBOT_IAM_SECRET_ACCESS_KEY=robot_iam_secret_access_key
 KINDLE_RECIPIENT=kindle_recipient
 KINDLE_SENDER=kindle_sender
+KINDLE_OUTPUT_DIR=kindle_output_dir
 
 SUPABASE_URL=supabase_url
 SUPABASE_KEY=supabase_key
