--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "lint": "eslint .",
     "test": "DOTENV_CONFIG_PATH=.env.example jest",
-    "quirrel": "quirrel"
+    "quirrel": "quirrel",
+    "vercel-build": "quirrel ci"
   },
   "repository": {
     "type": "git",
@@ -24,7 +25,7 @@
     "axios": "^0.21.1",
     "html-to-epub": "^0.6.0",
     "nodemailer": "^6.4.17",
-    "quirrel": "^1.0.4"
+    "quirrel": "1.0.4-fix-94-2"
   },
   "devDependencies": {
     "@samtgarson/eslint-config": "^2.4.0",
