--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,12 +6,12 @@ jobs:
     name: Build and test
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '14'
-      - uses: bahmutov/npm-install@v1
-      - run: npm run lint
-      - run: npm run test
+      # - uses: actions/setup-node@v2
+      #   with:
+      #     node-version: '14'
+      # - uses: bahmutov/npm-install@v1
+      # - run: npm run lint
+      # - run: npm run test
       - uses: amondnet/vercel-action@v20
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
