--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "Webhooks for personal projects",
   "scripts": {
     "lint": "eslint .",
-    "test": "DOTENV_CONFIG_PATH=.env.example jest",
-    "quirrel": "NODE_ENV=developnent quirrel",
-    "vercel-build": "./bin/install-calibre && node_modules/.bin/quirrel ci"
+    "test": "DOTENV_CONFIG_PATH=.env.example jest"
   },
   "repository": {
     "type": "git",
@@ -19,26 +17,19 @@
   },
   "homepage": "https://github.com/samtgarson/hooks#readme",
   "dependencies": {
-    "@supabase/supabase-js": "^1.3.4",
     "airtable": "^0.10.1",
     "aws-sdk": "^2.840.0",
-    "axios": "^0.21.1",
-    "ebook-convert": "^2.0.1",
-    "node-html-to-image": "^3.1.0",
-    "nodemailer": "^6.4.17",
-    "quirrel": "1.0.4-fix-94-2"
+    "axios": "^0.21.1"
   },
   "devDependencies": {
     "@samtgarson/eslint-config": "^2.4.0",
     "@types/inflected": "^1.1.29",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.25",
-    "@types/nodemailer": "^6.4.0",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
     "@vercel/node": "^1.9.0",
     "chalk": "^4.1.0",
-    "concurrently": "^5.3.0",
     "dotenv": "^8.2.0",
     "eslint": "^7.19.0",
     "eslint-plugin-import": "^2.22.1",
